# Todo_application

./: Assignment.qml  AssignmentItemLayout.qml  AssignmentModuleFunctions.js  CMakeLists.txt  CMakeLists.txt.user.9596b1a  DelEditPopup.qml  Main.qml  ToDoPage.qml  database.cpp  database.h  main.cpp  todo.cpp  todo.h  todolist.cpp  todolist.h
